objects/ASI_eForm_IT_Procurement_Service_Request__c.object
<CustomObject>
    <fields>
        <fullName>ASI_eForm_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>IT_Procurement_Service_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_CIO__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CIO Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>IT_Procurement_Service_Requests3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Company__c</fullName>
        <label>Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Department__c</fullName>
        <label>Department</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Finance_Director__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Finance Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>IT_Procurement_Service_Requests2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_IT_Action__c</fullName>
        <label>Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>IT Acknowledged</fullName>
                </value>
                <value>
                    <fullName>Invalid Submission</fullName>
                </value>
                <value>
                    <fullName>Procurement In Progress</fullName>
                </value>
                <value>
                    <fullName>Work In Progress</fullName>
                    <default>true</default>
                    <label>Work In Progress</label>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_eForm_Notes__c</fullName>
        <formula>&quot;Please upload Software Installation License if Personal Software Installation is selected&quot;</formula>
        <label>Notes</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Owner_Full_Name__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; OwnerId , Owner:User.FirstName &amp; &quot; &quot; &amp; Owner:User.LastName )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Position__c</fullName>
        <label>Position</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Preferred_Vendor__c</fullName>
        <label>Preferred Vendor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Preview_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Preview Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>IT_Procurement_Service_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Reason_of_Requisition__c</fullName>
        <label>Reason</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Requirements__c</fullName>
        <label>Requirements</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Final</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_eForm_Submit_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Submit Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Sys_Allow_Submit_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sys_Allow Submit Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_sys_resubmit__c</fullName>
        <label>sys_resubmit</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Procurement &amp; Service Request</label>
    <listViews>
        <fullName>ASI_eForm_All_Procurement_Service</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>ASI_eForm_Status__c</columns>
        <columns>ASI_eForm_IT_Action__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>ASI_eForm_Owner_Full_Name__c</columns>
        <columns>ASI_eForm_Company__c</columns>
        <columns>ASI_eForm_Department__c</columns>
        <columns>ASI_eForm_Approver__c</columns>
        <columns>ASI_eForm_CIO__c</columns>
        <columns>ASI_eForm_Finance_Director__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Procurement &amp; Service Requests</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ASI_eForm_My_Procurement_Service</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>ASI_eForm_Status__c</columns>
        <columns>ASI_eForm_IT_Action__c</columns>
        <columns>ASI_eForm_Owner_Full_Name__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Procurement &amp; Service Requests</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>ITPSF-{0000000}</displayFormat>
        <label>Form No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Procurement &amp; Service Requests</pluralLabel>
    <recordTypes>
        <fullName>ASI_eForm_HK_Hardware_Software_Request</fullName>
        <active>true</active>
        <label>Hardware &amp; Software Request (HK)</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_eForm_HK_Hardware_Software_Request_Final</fullName>
        <active>true</active>
        <label>Hardware &amp; Software Request Final (HK)</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_eForm_HK_IT_Service_Request</fullName>
        <active>true</active>
        <label>IT Service Or Mobile Device Request (HK)</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_eForm_HK_IT_Service_Request_Final</fullName>
        <active>true</active>
        <label>IT Service Or Mobile Device Request Final (HK)</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>ASI_eForm_IT_Procurement_Manager_Access__c</fullName>
        <label>ASI eForm IT Procurement Manager Access</label>
    </sharingReasons>
    <validationRules>
        <fullName>ASI_eForm_Owner_Approver_Duplicate</fullName>
        <active>true</active>
        <errorConditionFormula>(ASI_eForm_Approver__c  = OwnerId ) ||
(ASI_eForm_CIO__c  = OwnerId ) ||
(ASI_eForm_Finance_Director__c  = OwnerId )</errorConditionFormula>
        <errorMessage>Approver and Owner cannot be the same.</errorMessage>
    </validationRules>
</CustomObject>